--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,6 +1,16 @@
+name: Docs
+
+on:
+  pull_request:
+    branches:
+      - main
+  push:
+    branches:
+      - main
+
 jobs:
   deploy:
-    name: Docs
+    name: Deploy
     runs-on: ubuntu-22.04
     steps:
       - name: Build docs
