--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,12 +1,11 @@
 name: Docs
-
 on:
-  pull_request:
-    branches:
-      - main
   push:
     branches:
       - main
+
+permissions:
+  contents: write
 
 jobs:
   deploy:
@@ -15,11 +14,16 @@ jobs:
     container:
       image: crystallang/crystal
     steps:
-      - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608
+      - name: Checkout 🛎️
+        uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608
+      - name: Install rsync 📚
+        run: |
+          apt-get update && apt-get install -y rsync
       - name: Build docs
-        run: crystal docs --project-name Representer --project-version 1.2.0-Dev
+        run: crystal docs --project-name Representer --project-version 1.2.0
       - name: Deploy docs
-        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         uses: JamesIves/github-pages-deploy-action@a1ea191d508feb8485aceba848389d49f80ca2dc
         with:
+          branch: gh-pages
           folder: docs # The folder the action should deploy.
+          clean: true
