--- a/shard.yml
+++ b/shard.yml
@@ -1,10 +1,11 @@
 name: representer
-version: 1.2.1
+version: 1.3.0
 
 authors:
   - Meatball
 
 description: |
-  Short description of representer
+  Shard to normlize (represent) Crystal code.
+  It makes so Crystal code can be comparred with each other.
 
 license: AGPL-3.0
